test add unit test failed