@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>todo_list</groupId>
 	<artifactId>TodoList</artifactId>
@@ -9,35 +9,61 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-		<maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+		<javafx.version>17.0.2</javafx.version>
+		<testfx.version>4.0.16-alpha</testfx.version>
 	</properties>
 	<dependencies>
+		<!-- JavaFX dependencies -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>11</version>
+			<version>22.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-fxml</artifactId>
-			<version>11</version>
+			<version>22.0.2</version>
 		</dependency>
+
+		<!-- TestFX dependencies -->
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-core</artifactId>
+			<version>4.0.17</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit5</artifactId>
+			<version>4.0.17</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>openjfx-monocle</artifactId>
+			<version>11.0.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- JUnit dependencies -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.7.0</version>
+			<version>5.8.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.7.0</version>
+			<version>5.8.2</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Mockito dependencies -->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.7.7</version>
+			<version>4.5.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -54,9 +80,29 @@
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
-				<version>0.0.5</version>
+				<version>0.0.8</version>
 				<configuration>
 					<mainClass>todo_list.Main</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>
+						--add-exports
+						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-exports
+						javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+						--add-opens
+						javafx.controls/javafx.scene.control=ALL-UNNAMED
+						--add-opens
+						javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
+						--add-opens
+						javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
+						--add-opens javafx.base/com.sun.javafx.beans=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
